added login via Google

--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,15 @@
 
     <script src="scripts/app.js" type="module"></script>
 
+
+
+    <script src="https://accounts.google.com/gsi/client" async defer></script>    
+    <script>
+    function loginFromGoogle(data) {
+        Auth.loginFromGoogle(data)
+    }
+    </script>
+
 </head>
 
 <body>
@@ -89,6 +98,24 @@
                     <a href="/register" class="navlink">Register a new account instead</a> 
                 </p>                   
                 
+                <fieldset>
+                    <div id="g_id_onload"
+                        data-client_id="25493545475-9fgbdn4p8iljp5s29b3d0irc2ftqapp9.apps.googleusercontent.com"
+                        data-context="signin"
+                        data-ux_mode="popup"
+                        data-callback="loginFromGoogle"
+                        data-auto_select="true"
+                        data-itp_support="true">
+                    </div>
+
+                    <div class="g_id_signin"
+                        data-type="standard"
+                        data-shape="rectangular"
+                        data-theme="outline"
+                        data-text="signin_with"
+                        data-size="medium"
+                        data-logo_alignment="left">
+                    </div>
                 </fieldset>
             </form>            
         </section>
